example changes to index pagw

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <div class="box-1">
           <img src="img/logo.png">
-          <h1>stoelmassage</h1>
-          <h3>€ 25,-</h3>
+          <h1>example</h1>
+          <h3>€ -0000</h3>
         </div>
     </div>
 
