--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       </ul>
     </div>
     <div class="container">
-      <h1>Contact Page</h1>
+      <h1>Contact Me</h1>
     </div>
     <div class="footer">
 
